[package]
name = "ledger"
version = "0.1.0"
edition = "2024"
description = "Local HTTP proxy that captures, stores, replays, and inspects API traffic — terminal-native and zero-config"
license = "Apache-2.0"
repository = "https://github.com/synthalorian/ledger"
keywords = ["http", "proxy", "debugging", "cli", "tui"]
categories = ["command-line-utilities", "web-programming", "development-tools"]

[[bin]]
name = "ledger"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env", "color"] }

# Async HTTP server/client
hyper = { version = "1", features = ["client", "server", "http1", "http2"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["client-legacy", "server", "http1", "http2", "tokio"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2", "tls12", "logging"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
rcgen = { version = "0.14", features = ["x509-parser", "pem"] }
tokio-rustls = "0.26"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# Async SQLite
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Pattern matching
regex = "1"

# HTTP header types
headers = "0.4"

# Config directory resolution
dirs = "6"

# TOML config parsing
toml = "0.8"

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Temporary files
tempfile = "3"

# WebSocket support
tokio-tungstenite = { version = "0.26", features = ["connect"] }
tungstenite = "0.26"
futures-util = "0.3"

# Lua scripting for pre/post request hooks
mlua = { version = "0.10", features = ["lua54", "async", "send", "serialize"] }
